--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Tehtävä</h2>
     <div>
       <h2>Sprintti 3:Ohjelmoinnin perusteita</h2>
       <h3>Status: Done</h3>
-      <a href="Laske.html">Luettele lukuja</a><br>
+      <a href="laske.html">Luettele lukuja</a><br>
       <a href="bmi.html">Painoindeksi</a>
 
     </div>
