--- a/html-tehtava.html
+++ b/html-tehtava.html
@@ -20,6 +20,8 @@
       <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML element reference</a></li>
       <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">W3Schools HTML Tutorial</a></li>
     </ul>
+    <p>Jos vastaus ei näy paina oikeasta yläkulmasta kilpeä joka on puoliksi väritetty</p>
+    <p>ja anna sille lupa käyttää scriptiä</p>
     <div id="vastaus"></div>
   </main>
   <footer>
