--- a/html-tehtava.html
+++ b/html-tehtava.html
@@ -15,7 +15,7 @@
   <main>
     <h1>HTML-tehtävä</h1>
     <p>Jos vastaus ei näy paina oikeasta yläkulmasta kilpeä joka on puoliksi väritetty</p>
-    <p>ja anna sille lupa käyttää scriptiä</p>
+    <p>ja anna sille lupa käyttää scriptiä</p><br>
     
     <p>Mitä HTML-elementtejä tämä sivu sisältää? Selitä jokainen lyhyesti.</p>
     <p>Tietoa löydät vaikkapa näistä lähteistä:</p>
